Handheld support: Disable volume slider for iOS. Fullscreen for iPhone. Two-row controls bar on narrow widths. Bug fixes-
Closes #6.

(cherry picked from commit 4ae85302fb14143ae211a219f589a95fe53b661f)

--- a/src/replay/default-player/default-skin/animations.css
+++ b/src/replay/default-player/default-skin/animations.css
@@ -43,7 +43,15 @@
     opacity: 0;
 }
 
-.replay-controls-bar:hover, .replay-is-paused .replay-controls-bar {
+@media (hover) {
+    .replay-controls-bar:hover {
+        cursor: default;
+        visibility: visible;
+        opacity: 1;
+    }
+}
+
+.replay-is-paused .replay-controls-bar {
     cursor: default;
     visibility: visible;
     opacity: 1;
